test/tests/compiler/16_characters_and_strings/invalid_parse/extra_credit/character_const_label.plx
# You can't use a character constant as a label
pub fn main(none) i32 {
    label 'x'
    return 0
}
